--- a/HomeworkTwo/.classpath
+++ b/HomeworkTwo/.classpath
@@ -4,6 +4,7 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
-	<classpathentry exported="true" kind="lib" path="/DarkMaze/libs/android-support-v4.jar"/>
+	<classpathentry kind="lib" path="/DarkMaze/libs/android-support-v4.jar"/>
+	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
